# packc

./: makefile  pyproject.toml  readme.md
packc/: __init__.py
