[build-system]
requires = ["setuptools"] # list of packcges needed to build your packcge
build-backend = "setuptools.build_meta" # name of the python object that frontends use to perform the build

[project]
name = "packc"
version = "0.0.1"
authors = [
  { name="numlims", email="numlims@med.uni-greifswald.de"}
]
description = "db connect query"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
]
classifiers = [
  "Programming Language :: Python :: 3"
]
#[project.scripts]
#packc = "packc:__main__"

[tool.setuptools]
packages = ["packc"]